--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "form-data": "^4.0.2",
+    "node-fetch": "^3.3.2"
   }
 }
