--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "soundtouchjs": "^0.2.1",
+    "tone": "^15.1.22",
     "wavesurfer.js": "^7.9.5",
     "web-vitals": "^2.1.4"
   },
