--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,11 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^1.4.5-lts.2"
   },
